# nk-network-cell-modelling-web-old-

cell_modelling_site/cell_modelling/: Makefile  Makefile.am  Makefile.in  analyze.py  automata.py  boolfunction.py  debug.py  drawgraph.py  generate_automata.py  generate_automata.py.bak  process_automata.py  processing.py  proxyfunctions.py  saveload.py  state.py  sys  test.py
cell_modelling_site/cell_modelling/old/: AutomataHieratchy.py.bak  AutomataStatesStructure.py.bak  Basin.py.bak  GraphIsomorphism.py.bak  myRandom.py.bak.bak  proxyfunctions.bak
cell_modelling_site/cell_modelling_site/: urls.py
cell_modelling_site/graphs/: urls.py  views.py
cell_modelling_site/graphs/static/graphs/: style.css
