cell_modelling_PYTHON = \
	analyze.py \
	attractor.py \
	automata.py \
	boolfunction.py \
	debug.py \
	drawgraph.py \
	generate_automata.py \
	__init__.py \
	myrandom.py \
	process_automata.py \
	processing.py \
	proxyfunctions.py \
	saveload.py \
	state.py \
	test.py 

cell_modellingdir = $(pythondir)/cell_modelling
